# nnpp

./: CMakeLists.txt  sigmoid.cpp  table.cpp
include/: fanout  multilayer  multilayer_def.hpp  neural  neural.hpp  nlayer  nnpp  sigmoid  table
lib/armadillo/: README.txt
samples/: germanic.cpp
samples/data/: simpsons-wordlist.txt
src/: fanout.cpp  sigmoid.cpp  table.cpp
test/: fanout-test.cpp  multilayer-fanout-test.cpp  multilayer-table-test.cpp  multilayer-test.cpp  sigmoid-test.cpp  table-test.cpp  test-harness.cpp  test-harness.hpp
